src/components/HorizontalScroller/HorizontalScroller.css
.scroll-container {
  position: sticky;
  width: 100vw;
  overflow-x: hidden;
  /* Hide the scrollbar */
  white-space: nowrap;
  scroll-behavior: smooth;
  padding: 10px;
  box-sizing: border-box;
  border: 3px solid rgb(69, 51, 147);
  background-color: white;
  top: 250px;
  /* Adjust this value based on the height of your navbar */
  left: 0;
  z-index: 1000;
  /* Ensure it stays above other content */
  cursor: pointer;
  padding-bottom: 3px;
}

.horizontal-scroller.fixed {
  top: -1px;
  /* Raise by 2 pixels when fixed */
  z-index: 1000;
}

.scroll-content {
  display: inline-flex;
  align-items: center;
  animation: scroll 15s linear infinite;
  white-space: nowrap;
  will-change: transform;
}

.scroll-item {
  flex: 0 0 auto;
  /* margin-top: 250px; */
  margin-right: 20px;
  text-align: center;
  width: auto;
  max-height: 30px;
  /* animation: scroll 10s linear infinite; */
}

.scroll-item img {
  max-height: 100px;
  border-radius: 10px;
}

@keyframes scroll {
  0% {
    transform: translateX(0);
  }

  100% {
    transform: translateX(-33.33%);
  }
}

.horizontal-scroller.fixed {
  position: sticky;
}

/* Mobile styles */
@media (max-width: 600px) {
  .horizontal-scroller {
    top: 200px;
  }

  .scroll-content {
    animation: scroll 10s linear infinite;
  }
}

/* Medium screen styles */
@media (min-width: 601px) and (max-width: 1024px) {
  .horizontal-scroller {
    top: 220px;
    width: 100vw;
  }

  .scroll-content {
    animation: scroll 12s linear infinite;
  }
}

/* Large screen styles */
@media (min-width: 1025px) {
  .horizontal-scroller {
    top: 250px;
    width: 100vw;
  }

  .scroll-content {
    animation: scroll 15s linear infinite;
  }
}

